--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ form{
 input[type="text"]{
     padding: 1rem;
     font-weight: 900;
-    border: 3px solid pink;
+    border: 5px solid black;
     font-size: 1rem;
     border-radius: 5%;   
 }
